--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
+    "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5"
   },
