--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-focus-scope": "^1.1.0",
+    "@radix-ui/react-portal": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^19.0.0",
+    "react-remove-scroll": "^2.6.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
