--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,50 +6,50 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Node.js
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Debug Info
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Directory contents:"
+          ls -la
+          echo "Node version:"
+          node -v
+          echo "NPM version:"
+          npm -v
+
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          
-      - name: Install dependencies
+
+      - name: Install Dependencies
         run: |
           echo "Installing dependencies..."
           npm install
-        
+          echo "Dependencies installed"
+          npm list --depth=0
+
       - name: Build
         run: |
-          echo "Starting build process..."
+          echo "Starting build..."
           npm run build
           echo "Build completed"
-          echo "Listing output directory:"
+          echo "Output directory contents:"
           ls -la out/
-        
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./out
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: out
+          branch: gh-pages
